# mini-classical-mechanics

./: README-CN.md  README.md
.workflow/: alignment-workflow.md
mini-celestial-mechanics/: Makefile  Project.toml  README.md
mini-celestial-mechanics/benchmark/: README.md
mini-celestial-mechanics/docs/: api-map.md  celestial-cheatsheet.md  course-tree.md  gap-report.md  knowledge-graph.md  university-coverage.md
mini-celestial-mechanics/examples/: ground_track.jl  hohmann_transfer.jl  interplanetary.jl  j2_perturbation.jl  lambert_problem.jl  orbital_elements.jl
mini-celestial-mechanics/include/: celestial_types.h  kepler.h  mission.h  perturbations.h  three_body.h  two_body.h
mini-celestial-mechanics/src/: CelestialMechanics.jl  celestial_types.c  kepler.c  kepler.jl  mission.c  mission.jl  perturbations.c  perturbations.jl  three_body.c  three_body.jl  two_body.c  two_body.jl  types.jl
mini-celestial-mechanics/tests/: runtests.jl  test_celestial.c
mini-chaos/: Makefile  Project.toml  README.md
mini-chaos/benchmark/: README.md
mini-chaos/docs/: api-map.md  chaos-cheatsheet.md  course-alignment.md  course-tree.md  (+4 more)
mini-continuum/: Makefile  Project.toml  README.md
mini-hamiltonian/: Makefile  Project.toml  README.md
mini-lagrangian/: Makefile  Project.toml  README.md
mini-newtonian/: Makefile  Project.toml  README.md
mini-newtonian/cpp/: CMakeLists.txt  nbody_accel.cpp  nbody_accel.hpp  nbody_wrapper.jl
mini-rigid-body/: Makefile  Project.toml  README.md
mini-variational-principle/: Makefile  Project.toml  README.md  build_c.py
(+292 files in other folders)
